# lcd

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  log4rs.yaml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue
src/lang/: en.ts  index.ts  zh.ts
src/layout/: index.vue
src/route/: index.ts
src/views/board/: index.vue
src/views/board/components/: chart.vue
src/views/components/: scan.vue
