[package]
name = "lcd"
version = "0.0.1"
description = "Liquid Cooler Desktop"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
lazy_static = "1.4"
log = "0.4.14"
log4rs = "1.0"
miner-core = { version = "*", path = "../../miners" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "fs-all", "shell-open"] }
tokio = { version = "1", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
