[package]
name = "lcd"
version = "1.0.3"
description = "Liquid Tools @BTC"
authors = ["codegene"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
lazy_static = "1.4"
log = "0.4.14"
log4rs = "1.0"
lcd-core = { git = "https://github.com/pfcoder/lcd-core.git", branch = "main" }
#lcd-core = { path = "../../lcd-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
window-shadows = "0.2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
